# minisqlite

./: Cargo.toml  README.md
crates/minisqlite/: Cargo.toml
crates/minisqlite-btree/: Cargo.toml
crates/minisqlite-btree/src/: build.rs  count.rs  cursor.rs  delete.rs  index.rs  index_balance.rs  index_build.rs  index_cursor.rs  index_delete.rs  index_key.rs  index_nav.rs  insert.rs  lib.rs  nav.rs  overflow_io.rs  tree.rs
crates/minisqlite-btree/tests/: btree.rs  delete.rs  delete_in_place.rs  delete_rebalance.rs  index.rs  index_delete.rs  index_delete_in_place.rs  index_insert_in_place.rs  insert_in_place.rs  overflow.rs  table_fill.rs
crates/minisqlite-catalog/: Cargo.toml
crates/minisqlite-catalog/src/: alter_data.rs  alter_rewrite.rs  builder.rs  catalog.rs  def.rs  drop_checks.rs  introspect.rs  lib.rs  multicatalog.rs  reserved.rs  schema_row.rs  schemacatalog.rs  trigger_target.rs
crates/minisqlite-catalog/tests/: encoding_load.rs
crates/minisqlite-engine/: Cargo.toml
crates/minisqlite-engine/src/: analyze.rs  attach.rs  ctas.rs  deferred_fk.rs  dispatch.rs  engine.rs  lib.rs  namespace.rs  pragma.rs  txn.rs  vacuum.rs
crates/minisqlite-engine/tests/: engine.rs
crates/minisqlite-exec/: Cargo.toml
crates/minisqlite-exec/src/: context.rs  corr_key.rs  env.rs  executor.rs  index_build.rs  keys.rs  lib.rs  row.rs  runner.rs  runtime.rs  statement.rs
crates/minisqlite-exec/src/ops/: aggregate.rs  constraints.rs  cte.rs  delete.rs  distinct.rs  dml_index.rs  filter.rs  foreign_key.rs  generated.rs  indexscan.rs  insert.rs  instead_of.rs  join.rs  limit.rs  minmax_seek.rs  mod.rs  must_be_int.rs  pragma_function.rs  project.rs  returning.rs  scan.rs  sequence.rs  setop.rs  sort.rs  sortkey.rs  table_function.rs  trigger.rs  update.rs  values.rs  window.rs  without_rowid.rs
crates/minisqlite-exec/src/ops/window/: frame.rs  navigation.rs  partition.rs  ranking.rs
crates/minisqlite-exec/tests/: aggregate.rs  cte.rs  delete.rs  encoding.rs  exec.rs  indexscan.rs  insert.rs  join.rs  not_null.rs  replace.rs  replace_foreign_key.rs  setop.rs  subquery.rs  subquery_cache.rs  update.rs  update_replace.rs  upsert_foreign_key.rs  upsert_rowid_change.rs  window.rs  window_navigation.rs  window_ranking.rs  without_rowid_delete.rs  without_rowid_secondary_index.rs  without_rowid_update.rs
crates/minisqlite-expr/: Cargo.toml
crates/minisqlite-expr/src/: coerce.rs  context.rs  datetime.rs  eval.rs  function.rs  ir.rs  lib.rs  pattern.rs
crates/minisqlite-fileformat/: Cargo.toml
crates/minisqlite-fileformat/src/: bytes.rs  freelist.rs  header.rs  lib.rs  overflow.rs  page.rs  page_edit.rs  ptrmap.rs  record_cursor.rs  serial.rs  text_encoding.rs  varint.rs
crates/minisqlite-functions/: Cargo.toml
crates/minisqlite-functions/src/: lib.rs  registry.rs
crates/minisqlite-journal/: Cargo.toml
crates/minisqlite-journal/src/: codec.rs  lib.rs  recover.rs  util.rs  writer.rs
crates/minisqlite-journal/tests/: recovery.rs
crates/minisqlite-pager/: Cargo.toml
crates/minisqlite-pager/src/: alloc.rs  av_commit.rs  busy.rs  checkpoint.rs  cow.rs  dbinfo.rs  diskpager.rs  diskstore.rs  lib.rs  mempager.rs  page1.rs  pager.rs  ptrmap_build.rs  reclaim.rs  roots_first.rs  store.rs  walindex.rs  walshared.rs  walstore.rs
crates/minisqlite-pager/tests/: ondisk_format_encoding_vacuum.rs  ondisk_format_read.rs  ondisk_format_write.rs  savepoints.rs  wal.rs
crates/minisqlite-pager/tests/common/: mod.rs
crates/minisqlite-plan/: Cargo.toml
crates/minisqlite-plan/src/: access.rs  access_path.rs  colname.rs  lib.rs  plan.rs  plan_ctx.rs  planner.rs  query_planner.rs  tests.rs  window.rs
crates/minisqlite-plan/src/bind/: expr.rs  mod.rs  scope.rs
crates/minisqlite-plan/src/compile/: aggregate.rs  check.rs  compound.rs  covering.rs  ctas.rs  cte.rs  delete.rs  from.rs  generated.rs  index_expr.rs  insert.rs  instead_of.rs  minmax_index.rs  mod.rs  order_scan.rs  pragma_tvf.rs  select.rs  trigger.rs  update.rs  values.rs  view.rs  window.rs
crates/minisqlite-plan/tests/: minmax_index_real_catalog.rs  order_scan_real_catalog.rs
crates/minisqlite-sql/: Cargo.toml
crates/minisqlite-sql/src/: ast_ddl.rs  ast_dml.rs  ast_expr.rs  ast_select.rs  ast_stmt.rs  keyword.rs  lib.rs  token.rs
crates/minisqlite-types/: Cargo.toml
crates/minisqlite-types/src/: affinity.rs  cast.rs  collation.rs  compare.rs  dbindex.rs  error.rs  lib.rs  namespace_meta.rs  (+2 more)
crates/minisqlite-wal/: Cargo.toml
crates/minisqlite/benches/: workloads.rs
crates/minisqlite/src/: lib.rs
crates/minisqlite/tests/: conformance_affinity.rs  conformance_aggregate_filter.rs  conformance_aggregates.rs  conformance_alter_table.rs  conformance_analyze.rs  conformance_attach.rs  conformance_auto_vacuum.rs  conformance_auto_vacuum_reclaim.rs  conformance_auto_vacuum_write.rs  conformance_between_in.rs  conformance_case_expr.rs  conformance_cast.rs  conformance_collation.rs  conformance_comparison.rs  conformance_comparison_affinity.rs  conformance_compound.rs  conformance_compound_order.rs  conformance_concurrency.rs  conformance_concurrency_interleave.rs  conformance_constraints.rs  conformance_correlated_aggregate.rs  conformance_correlated_cache.rs  conformance_correlated_cte.rs  conformance_correlated_join.rs  conformance_correlated_subquery_aggregate.rs  conformance_count_fastpath.rs  conformance_count_scan_fastpath.rs  conformance_covering_index.rs  conformance_crash_recovery.rs  conformance_cross_namespace_dml_subquery.rs  conformance_cross_namespace_read_shapes.rs  conformance_cross_namespace_triggers.rs  conformance_ctas.rs  conformance_cte.rs  conformance_datetime.rs  conformance_ddl.rs  conformance_deferred_fk.rs  conformance_derived_affinity.rs  conformance_distinct_collation.rs  conformance_dml_cte_from.rs  (+73 more)
crates/minisqlite/tests/conformance/: mod.rs
docs/repo-understanding/: 00-summary.md  01-important-files.md  02-concepts.md  03-runtime-flow.md  04-behaviour-walkthroughs.md  05-config-and-env.md  06-tests-and-fixtures.md  07-change-map.md  08-diagrams.md  09-caveats-and-unknowns.md
(+39 files in other folders)
